# GOS

./: .gitignore  .pre-commit-config.yaml  GOS + Multiscale Migration Model-Copy1.ipynb  GOS+Multiscale+Migration+Model-Copy1.ipynb  Interactive.ipynb  Makefile  README.rst  Visualization Test Notebook.ipynb  World.ipynb  World.py  World_Py2.ipynb  check1.csv  check2.csv  check3.csv  genindex.html  globalsim.py  gos.py  index.html  migration.py  objects.inv  output.csv  output1.csv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.cfg
World/: World.dbf
_sources/source/: migration.rst.txt
data/: Net Population Change Caused by Migration.xls
docs/: Makefile  conf.py  index.rst  make.bat
docs/source/: migration.rst  multiscale-migration.rst
examples/migration/: README_Viz.md  VizDemo.py  VizDemo2.py  all.csv  changes.csv  constants.py  data.py  gos.py  migration.py  migration_sharedmem.py  ms.csv
examples/multiscale-migration/: GOS + Multiscale Migration Model.ipynb  GOS + Multiscale Migration Model.ipynb.webloc  GOS+%2B+Multiscale+Migration+Model.ipynb  GOS+Multiscale+Migration+Model.ipynb  Multiscale Migration Model (Draft).ipynb  Multiscale Migration Model (Draft+Old).ipynb  Multiscale Migration Model.ipynb  README.rst  Spanish+GOS+Multiscale+Migration+Model.ipynb  data.py  refs.bib
examples/schelling/: Schelling.ipynb
gos/: __init__.py  gos.py  visulize.py
migration/: constants.py  data.py  migration.py
source/: migration.html  multiscale-migration.html
test_model/: WholeModelTest.py
tests/: conftest.py  test_validation.py
(+55 files in other folders)
