[project]
name = "global-open-simulator"
version = "1.0.1"
description = "A parallel agent-based platform for global social modelling."
authors = [
    {name = "James Sweet", email = "jsweet@nd.edu"},
]
dependencies = [
    "numpy>=1.12.1",
    "pandas>=0.20.1",
    "sphinxcontrib-bibtex>=0.3.6",
    "Cartopy>=0.20.2",
    "haversine>=2.5.1",
    "openpyxl>=3.0.9",
    "ipywidgets>=7.6.5",
    "ipykernel>=6.29.4",
    "scipy>=1.14.0",
]
requires-python = ">=3.8,<3.11"
readme = "README.rst"
license = {file = "LICENSE"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"