[project]
name = "gos"
version = "1.0.1"
description = "A parallel agent-based platform for global social modelling."
authors = [
    {name = "James Sweet", email = "jsweet@nd.edu"},
]
dependencies = [
    "numpy>=1.12.1",
    "pandas>=0.20.1",
    "sphinxcontrib-bibtex>=0.3.6",
    "Cartopy>=0.20.2",
    "haversine>=2.5.1",
    "openpyxl>=3.0.9",
    "ipywidgets>=7.6.5",
    "ipykernel>=6.29.4",
    "scipy>=1.14.0",
    "xlrd>=2.0.1",
]
requires-python = ">=3.10,<3.11"
readme = "README.rst"
license = {file = "LICENSE"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.5.2",
    "pytest>=8.3.2",
]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = ["src", "tests"]
addopts = ["--import-mode=importlib"]
